--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,15 +98,16 @@ a{
 }
 
 #content {
-    background-color: #dddeeb;
+    background-color: #F2F7FF;
     min-height: 1000px;
+    overflow: hidden;
 }
 
 .content-head {
     width: 100vw;
     padding: 50px 7vw;
-    margin: 0 10px;
     font-size: 27px;
+    font-weight: bold;
 }
 
 .content-main{
@@ -129,17 +130,79 @@ a{
 .top-cnt-main .pf-view{
     display: flex;
     justify-content: space-between;
-    width: 20%;
+    width: 23.5%;
     height: 130px;
     padding: 32px 24px;
     background-color: #fff;
-    border-radius: 5px;
+    border-radius: 5%;
+    margin: 20px 0px;
 }
 
 .top-cnt-main .pf-view .i-wrapper{
-    width: 48px;
+    width: 48px !important;
+    height: 48px !important; 
+    border-radius: 10px;
+    background-color: #9694FF;
+}
+
+.i-wrapper i{
+    display: flex;
     height: 48px;
-    background-color: purple;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    color: #fff;
+}
+
+.top-cnt-main .pf-view .pf-main{
+    width: 60%;
+    padding: 5%;
+}
+
+.content-left-blc .pf-chart {
+    margin: 20px 0;
+    width: 100%;
+    min-height: 200px;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.content-left-blc .pf-chart .pf-chart-hd{
+    height: 80px;
+    padding: 24px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.content-left-blc .pf-chart .pf-chart-main {
+    padding: 0 24px 24px;
+    position: relative;
+}
+
+.pf-chart-main i{
+    position: absolute;
+    right: 24px;
+}
+
+.pf-chart-main .chart-menu{
+    position: absolute;
+    border: 1px #000 solid;
+    border-radius: 2px;
+    width: 150px;
+    height: 90px;
+    background-color: #fff;
+    text-align: center;
+    /* display: flex; */
+    flex-direction: column;
+    justify-content: space-around;
+    right: 25px;
+    top: 20px;
+    display: none;
+}
+
+.pf-chart-main i:hover .chart-menu {
+    /* margin: 0 5px; */
+    display: flex;
 }
 
 .content-right-blc{
@@ -147,7 +210,73 @@ a{
     min-height: 100px;
 }
 
+.content-right-blc .user-pf{
+    width: 100%;
+    height: 108px;
+    padding: 24px 48px;
+    margin: 20px 0;
+    border-radius: 10px;
+    background-color: #fff;
+    display: flex;
+    /* justify-content: space-between; */
+}
 
+.user-pf .user-pf-img img{
+    width: 60px;
+    height: 60px;
+    border-radius: 90%;
+    border: 1px #333 solid;
+    margin-right: 20px;
+}
+
+.user-pf-main{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.userpf-name, .userpf-name-tag{
+    font-weight: 900;
+}
+
+.recent-mes{
+    margin: 40px 0;
+    background-color: #fff;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.recent-mes .recent-mes-hd{
+    padding: 24px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.recent-mes .rc-mess-user{
+    padding: 16px 24px;
+    display: flex;
+}
+
+.rc-mess-user .mess-user-img img{
+    width: 48px;
+    height: 48px;
+    border-radius: 90%;
+    border: 1px #333 solid;
+    margin-right: 20px;
+}
+
+.conver-btn{
+    width: 80%;
+    padding: 5% 15% ;
+    margin: 0 10% 20px;
+    background-color: #EBF3FF;
+    font-weight: bold;
+    border: none;
+}
+
+.show {
+    display: flex;
+}
 
 @keyframes slideup {
     from{
