--- a/assets/css/addProject.css
+++ b/assets/css/addProject.css
@@ -12,6 +12,39 @@ button{
     padding: 2px 5px;
 }
 
+.add-device-mockup{
+    position: fixed;
+    top: 20%;
+    left: 20%;
+    width: 60%;
+    height: 60%;
+    background-color: #302d2d;
+    border: 2px #000 solid;
+    overflow-y: scroll;
+    padding: 1%;
+}
+
+.add-device-hd span{
+    font-weight: bold;
+    font-size: 30px;
+    padding-left: 10px;
+    padding-right: 75%;
+}
+
+.device-hd span{
+    margin-right: 30px;
+    font-weight: bold;
+}
+
+.device-hd .add-chanel-btn{
+    cursor: pointer;
+}
+
+.add-device-mockup label{
+    width: 120px;
+    padding: 10px;
+}
+
 .structure-mockup{
     position: fixed;
     top: 10%;
@@ -24,7 +57,11 @@ button{
     padding: 1%;
 }
 
-.add-device-mockup{
+.structure-mockup span{
+    display: block;
+}
+
+.add-chanel-mockup{
     position: fixed;
     top: 10%;
     left: 20%;
@@ -32,25 +69,23 @@ button{
     height: 80%;
     background-color: #302d2d;
     border: 2px #000 solid;
-    /* padding: 10px; */
+    padding: 3%;
     overflow-y: scroll;
-    display: flex;
 }
 
-.add-device-left{
-    flex-direction: column;
+.add-chanel-mockup > label{
+    font-size: 30px;
+    font-weight: bold;
+    margin-right: 20px;
 }
 
-.add-device-mockup div{
+.add-chanel-mockup div{
     display: flex;
     margin: 10px 10px;
 }
 
-.add-device-mockup span{
-    display: block;
+.add-chanel-mockup div label{
+    /* display: block; */
     width: 60px !important;
 }
 
-.add-device-right{
-    flex-direction: column;
-}
