--- a/assets/css/addProject.css
+++ b/assets/css/addProject.css
@@ -17,7 +17,7 @@ button{
     top: 20%;
     left: 20%;
     width: 60%;
-    height: 60%;
+    height: 65%;
     background-color: #302d2d;
     border: 2px #000 solid;
     overflow-y: scroll;
@@ -40,7 +40,7 @@ button{
     font-weight: bold;
 }
 
-.device-hd .add-chanel-btn, .edit-device-btn{
+.device-hd .add-chanel-btn, .edit-device-btn, .delete-device-btn{
     cursor: pointer;
 }
 
@@ -111,4 +111,36 @@ button{
     background-color: #949494;
 }
 
+/*  */
 
+.container {
+    margin: 50px auto;
+    width: 80%;
+}
+.block {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    cursor: pointer;
+}
+.block .add-button, .delete-button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 0px 4px;
+    border: none;
+    cursor: pointer;
+}
+.block .cancel-button {
+    color: #007bff;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+}
+.block .add-input {
+    width: 200px;
+    padding: 5px;
+    margin-right: 10px;
+}
+.block-level-2, .block-level-3, .block-level-4 {
+    margin-left: 20px;
+}
