--- a/assets/css/addProject.css
+++ b/assets/css/addProject.css
@@ -10,6 +10,8 @@
 
 button{
     padding: 2px 5px;
+    background: none;
+    border: none;
 }
 
 .add-device-mockup{
@@ -116,22 +118,29 @@ button{
 .container {
     margin: 50px auto;
     width: 80%;
+    display: inline;
 }
+
 .block {
-    padding: 10px;
+    padding: 5px 10px 0;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
     cursor: pointer;
 }
+
+.block-level-1{
+    border: 1px solid #ccc;
+}
+
 .block .add-button, .delete-button {
-    background-color: #007bff;
-    color: #fff;
+    /* background-color: #007bff; */
+    color: #ccc;
+    /* background: none; */
     padding: 0px 4px;
     border: none;
     cursor: pointer;
 }
 .block .cancel-button {
-    color: #007bff;
+    /* color: #007bff; */
     padding: 5px 10px;
     border: none;
     cursor: pointer;
