--- a/assets/css/addProject.css
+++ b/assets/css/addProject.css
@@ -8,6 +8,12 @@
     justify-content: space-between;
 }
 
+.addPrj-hd-left span{
+    font-size: 20px;
+    font-weight: bold;
+    padding: 0 10px;
+}
+
 button{
     padding: 2px 5px;
     background: none;
@@ -141,11 +147,18 @@ button{
     border: 1px solid #ccc;
 }
 
+.add-button{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
 .block .add-button, .delete-button {
     /* background-color: #007bff; */
     color: #ccc;
     /* background: none; */
-    padding: 0px 4px;
+    padding: 0px 10px;
     border: none;
     cursor: pointer;
 }
