--- a/assets/css/addProject.css
+++ b/assets/css/addProject.css
@@ -1,9 +1,7 @@
 
 
 #add-project{
-    width: 100%;
-    padding: 30px 5vw 0;
-    margin-bottom: 30px;
+    padding: 30px;
 }
 
 .addPrj-hd{
@@ -25,14 +23,8 @@ button{
 
 .add-device-mockup{
     position: fixed;
-    top: 20%;
-    left: 20%;
-    width: 60%;
-    height: 65%;
-    background-color: #302d2d;
-    border: 2px #000 solid;
-    overflow-y: scroll;
-    padding: 1%;
+    top: 5%;
+    left: 35%;
 }
 
 .add-device-btn{
@@ -62,60 +54,37 @@ button{
 
 .structure-mockup{
     position: fixed;
-    top: 10%;
-    left: 10%;
-    width: 80%;
-    height: 80%;
-    background-color: #302d2d;
-    border: 2px #000 solid;
+    top: 20%;
+    left: 20%;
+    width: 60%;
+    height: 60%;
+    background-color: #1E1E2D;
+    border: 2px #ffffff solid;
     overflow-y: scroll;
-    padding: 1%;
+    padding: 50px;
+    z-index: 100;
 }
 
-.structure-mockup span{
-    display: block;
+.add-channel-mockup .card{
+    border: 2px #ccc solid !important;
 }
+
 
 .add-channel-mockup{
     position: fixed;
     top: 10%;
-    left: 20%;
-    width: 60%;
-    height: 80%;
-    background-color: #302d2d;
-    border: 2px #000 solid;
-    padding: 3%;
-    overflow-y: scroll;
+    left: 10%;
+    right: 10%;
+    z-index: 10;
 }
 
 #chonch {
     min-width: 64px;
 }
 
-.add-channel-mockup > label{
-    font-size: 30px;
-    font-weight: bold;
-    margin-right: 20px;
-}
-
-.add-channel-mockup .chonch label{
-    width: 150px !important;
-    /* padding: 10px; */
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.add-channel-mockup div{
-    margin: 10px 10px;
-}
-
-.add-channel-mockup div label{
-    /* display: block;  */
-    width: 80px !important;
-}
-
 .channel-btns, .device-btns{
     justify-content: right;
+    /* position: fixed; */
 }
 
 .channel-btns span, .device-btns span, .struc-save, .struc-close{
@@ -187,32 +156,13 @@ button{
     min-width: 70px;
 }
 
-#project-info{
-    width: 100%;
-    min-height: 1000px;
-    background-color: #3b3c3c;
-    display: flex;
-    border-top: 2px #ccc solid;
-}
-
-.prj-info-left{
-    width: 20%;
-    border-right: 2px #ccc solid;
-    padding: 20px 40px;
-}
-
-.prj-info-left .device-added{
+.menu .device-added{
     border-bottom: 1px #ccc solid;
     /* margin-left: 10px; */
     transition: all ease-in-out 0.4s;
 }
 
-.prj-info-right{
-    padding: 20px;
-    width: 80%;
-}
-
 .color-gray{
-    background-color: #636e72;
-    color: #000;
+    background-color: #151521;
+    color: #ccc;
 }
