--- a/management/assets/css/management.css
+++ b/management/assets/css/management.css
@@ -1,4 +1,39 @@
+html {
+  overflow-x: hidden;
+}
 .content-wrapper {
-  margin: 0 1vw !important;
-  max-width: 98vw !important;
+  --margin-x: 0vw;
+  margin: 0 var(--margin-x) !important;
+  max-width: calc(100vw - var(--margin-x)) !important;
+  padding: 0 1vw !important;
+}
+
+html[data-bs-theme="dark"] .row > * {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0.5rem;
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.4) !important;
+  padding-left: calc(var(--bs-gutter-x) * 0.4) !important;
+  padding-top: var(--bs-gutter-y);
+}
+
+.main-navbar,
+.header-top {
+  background-color: #151521 !important;
+}
+
+.card-header {
+  padding: 0 !important;
+  margin: 10px 0 0 10px;
+}
+
+.description {
+  height: auto !important;
+}
+
+.fa-compress {
+  margin: 10px 10px 0 0;
+  align-self: flex-end;
 }
